[package]
name = "intent-classifier"
version = "0.1.0"
edition = "2024"
authors = ["Eric Evans <ciresnave@gmail.com>"]
description = "A flexible few-shot intent classification library for natural language processing"
license = "MIT"
repository = "https://github.com/ciresnave/intent-classifier"
keywords = ["nlp", "intent", "classification", "machine-learning", "few-shot"]
categories = ["text-processing", "science"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data structures
dashmap = "5.5"
ahash = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"

# Text processing
regex = "1.0"
unicode-segmentation = "1.10"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
